Algumas mudanças no Front

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,8 +16,8 @@
     <div class="login-container">
         <!-- Cabeçalho -->
         <div class="login-header">
-            <i class="fas fa-money-bill-wave"></i>
-            <h1>Sistema de Pagamentos</h1>
+            <i class=""></i>
+            <h1>FlowFit</h1>
             <p>Faça login para acessar o sistema</p>
         </div>
 
