--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Gerenciamento de Pagamentos</title>
+    <title>FLowFit</title>
     
     <!-- Link para o CSS externo -->
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <h1><i class="fas fa-money-bill-wave"></i> Gerenciador de Pagamentos</h1>
+                <h1><i class=""></i> FlowFit - Sistema de Pagamentos</h1>
                 <p class="subtitle">Sistema completo para controle financeiro</p>
             </div>
         </div>
