--- a/frontend/usuarios.html
+++ b/frontend/usuarios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuários - Sistema de Pagamentos</title>
+    <title>FlowFit</title>
     
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header-content">
                 <div>
-                    <h1><i class="fas fa-money-bill-wave"></i> Sistema de Pagamentos</h1>
+                    <h1><i class=""></i> FlowFit - Sistema de Pagamentos</h1>
                     <p class="subtitle">Gerenciamento de Usuários</p>
                 </div>
                 <div class="user-info"></div>
