Inserção das logos no sistema

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <h1><i class=""></i> FlowFit - Sistema de Pagamentos</h1>
+                <h1><img src="midia/logo.png" alt="FlowFit Logo" class="logo"> FlowFit - Sistema de Pagamentos</h1>
                 <p class="subtitle">Sistema completo para controle financeiro</p>
             </div>
         </div>
