--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,8 +16,7 @@
     <div class="login-container">
         <!-- Cabeçalho -->
         <div class="login-header">
-            <i class=""></i>
-            <h1>FlowFit</h1>
+            <img src="midia/logo.png" alt="FlowFit Logo" class="logo">
             <p>Faça login para acessar o sistema</p>
         </div>
 
