--- a/frontend/inadimplentes.html
+++ b/frontend/inadimplentes.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header-content">
                 <div>
-                    <h1><i class=""></i> FlowFit - Sistema de Pagamentos</h1>
+                    <h1><img src="midia/logo.png" alt="FlowFit Logo" class="logo"> FlowFit - Sistema de Pagamentos</h1>
                     <p class="subtitle">Clientes Inadimplentes</p>
                 </div>
                 <div class="user-info"></div>
